--- a/CW PROJECT/orbitz_clone/src/components/Checkout.module.css
+++ b/CW PROJECT/orbitz_clone/src/components/Checkout.module.css
@@ -5,14 +5,14 @@
 }
 
 #div{
+    background-color: #ededed;
 
 }
 
 #mainDiv2{
     border: 2px solid red;
     width: 35%;
-    height: 600px;
-    background-color: #fff;
+    height: 410px;
 }
 
 #main{
@@ -20,8 +20,15 @@
     gap: 30px;
 }
 
+.div{
+    padding-top: 30px;
+    background-color: #ededed;
+}
+
 #address{
     border: 2px solid blue;
+    width: 63.4%;
+background-color: #fff;
     /* height: 100px; */
 
 }
@@ -57,6 +64,8 @@ input,select{
     border: 1px solid #623381;
 padding-bottom: 40px;
 margin-bottom: 30px;
+background-color: #fff;
+
 }
 
 #heading{
@@ -68,4 +77,5 @@ margin-bottom: 30px;
 #payment_detail{
     border: 1px solid #623381;
     padding-bottom: 40px;
+    background-color: #fff;
 }
