--- a/CW PROJECT/orbitz-clone-master/src/Components/Search/Home.module.css
+++ b/CW PROJECT/orbitz-clone-master/src/Components/Search/Home.module.css
@@ -1,5 +1,5 @@
 .home {
-  background-image: url("https://forever.travel-assets.com/flex/flexmanager/images/2021/08/19/ORB_LMLaborDay_imgB_1920x1440_20210813.jpg");
+  background-image: url("https://forever.travel-assets.com/flex/flexmanager/images/2021/11/01/ORB_Storefront_6_imgB_1400x600_20211028.jpg?impolicy=fcrop&w=900&h=506&q=mediumHigh");
   background-size: cover;
   background-position: bottom;
   background-repeat: no-repeat;
